--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -1,8 +1,5 @@
 name: build_docker_image
 
-#on:
-#  push:
-#    branches: main
 on:
   workflow_dispatch:
 
@@ -15,12 +12,11 @@ jobs:
     steps:
       -
         name: Login to GitHub Container Registry
-        uses: docker/login-action@v3.1.0
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          #token is auto generated for you
-          password: ${{ secrets.GH_TOKEN }} 
+          password: ${{ secrets.GITHUB_TOKEN }}  #this token is auto generated for you
       -
         name: Checkout Before Build
         uses: actions/checkout@v3
