--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
-    "express": "^4.21.1"
+    "axios-cookiejar-support": "^6.0.5",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.3.1",
+    "express": "^4.21.1",
+    "express-handlebars": "^8.0.6",
+    "tough-cookie": "^6.0.0"
   },
   "description": ""
 }
