--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-DYNAMIC_EP_ADMIN_KEY=
+DYNAMIC_EP_ADMIN_KEY=change_me
 DYNAMIC_EP_HOSTNAME=0.0.0.0
 DYNAMIC_EP_PORT=3000
+DYNAMIC_EP_LOGIN_RATE_LIMIT=5
+DYNAMIC_EP_LOGIN_RATE_LIMIT_WINDOW=10000
